# trade

./: .gitignore  README.md  trade.cabal
src/Data/: CBar.hs  Mark.hs  TBar.hs  Tick.hs  Trade.hs
